# TetgenV2

./: CMakeLists.txt  README.md
data/: tetra_surface.nas
include/: nastran_io.h
scripts/: install_opengl_glut_ubuntu.sh  install_opengl_glut_windows.ps1
src/: main.cpp  nastran_io.cpp  opengl_viewer.cpp  opengl_viewer_stub.cpp  vtu_viewer.cpp
